[package]
name = "devboot"
version = "0.1.0"
authors = ["Andrew Luchuk <andrew.luchuk@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0"
dirs-next = "2.0.0"